--- a/docs/react-ui-kit/build-in-call-ui/build-your-own/states based UI Split.mdx
+++ b/docs/react-ui-kit/build-in-call-ui/build-your-own/states based UI Split.mdx
@@ -16,7 +16,7 @@ hide={[{start:1, end: 5}, {start:28, end: 224}]}
 highlight={[{start:6, end: 26}]}
 file={`
 import { defaultConfig, generateConfig } from '@dytesdk/react-ui-kit';
-import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
+import { useDyteMeeting, useDyteSelector } from '@dytesdk/react-web-core';
 import { useEffect, useState } from 'react';
 
 function CustomProductDBMeeting({ meeting, config, states, setStates }: { meeting: ProductDBClient, config: UIConfig,  states: CustomStates, setStates: SetStates}){
@@ -42,7 +42,7 @@ function CustomProductDBMeeting({ meeting, config, states, setStates }: { meetin
 }
 
 export default function Meeting() {
-  const { meeting } = useProductDBMeeting();
+  const { meeting } = useDyteMeeting();
   const [config, setConfig] = useState(defaultConfig);
   /**
   * We need setStates method to add custom functionalities,
