--- a/docs/react-ui-kit/design-system.mdx
+++ b/docs/react-ui-kit/design-system.mdx
@@ -22,7 +22,7 @@ configure the design system of UI Kit components with a few lines of code.
 ```jsx live
 function Example() {
   const meetingEl = useRef();
-  const { meeting } = useProductDBMeeting();
+  const { meeting } = useDyteMeeting();
 
   useEffect(() => {
     // provideProductDBDesignSystem(node, designTokens)
