--- a/docs/react-web-core/chat/receiving-chat-messages.mdx
+++ b/docs/react-web-core/chat/receiving-chat-messages.mdx
@@ -14,7 +14,7 @@ can listen for the `chatUpdate` event to log when a new chat message is
 received.
 
 ```ts
-const messages = useProductDBSelector((m) => m.chat.messages));
+const messages = useDyteSelector((m) => m.chat.messages));
 ```
 
 Here, the `message` is of type `Message`, as defined in
