--- a/docs/react-web-core/pre-call/1-media-preview.mdx
+++ b/docs/react-web-core/pre-call/1-media-preview.mdx
@@ -41,8 +41,8 @@ flowchart LR
 
 
 ```ts
-const audioEnabled = useProductDBSelector((m) => m.self.audioEnabled);
-const audioTrack = useProductDBSelector((m) => m.self.audioTrack);
+const audioEnabled = useDyteSelector((m) => m.self.audioEnabled);
+const audioTrack = useDyteSelector((m) => m.self.audioTrack);
 ```
 
 <br />
@@ -88,8 +88,8 @@ flowchart LR
 <br />
 
 ```ts
-const videoEnabled = useProductDBSelector((m) => m.self.videoEnabled);
-const videoTrack = useProductDBSelector((m) => m.self.videoTrack);
+const videoEnabled = useDyteSelector((m) => m.self.videoEnabled);
+const videoTrack = useDyteSelector((m) => m.self.videoTrack);
 ```
 
 ### Changing Media Device
