--- a/docs/rn-ui-kit/basics/components-basics.mdx
+++ b/docs/rn-ui-kit/basics/components-basics.mdx
@@ -23,7 +23,7 @@ passed as a participant to this prop.
 
 ```jsx
 function Example() {
-  const { meeting } = useProductDBMeeting();
+  const { meeting } = useDyteMeeting();
 
   return (
     <View
@@ -44,7 +44,7 @@ meeting object
 
 ```jsx
 function Example() {
-  const { meeting } = useProductDBMeeting();
+  const { meeting } = useDyteMeeting();
 
   return (
     <View
