--- a/docs/guides/capabilities/video/picture-in-picture.mdx
+++ b/docs/guides/capabilities/video/picture-in-picture.mdx
@@ -36,7 +36,7 @@ Use `meeting.participants.pip.isSupported` to check if the browser supports Pict
 Call `meeting.participants.pip.init()` to activate PIP mode. Optionally you can pass height and width the configure the size of the PIP tile
 
 ```jsx
-const { meeting } = useProductDBMeeting();
+const { meeting } = useDyteMeeting();
 
 meeting.participants.pip.init({
   width: 360,
