--- a/docs/react-ui-kit/build-in-call-ui/build-your-own/customize-header.mdx
+++ b/docs/react-ui-kit/build-in-call-ui/build-your-own/customize-header.mdx
@@ -20,7 +20,7 @@ hide={[{start:1, end: 5}, {start:29, end: 227}]}
 highlight={[{start:6, end: 27}]}
 file={`
 import { defaultConfig, generateConfig, ProductDBLogo, ProductDBRecordingIndicator, ProductDBLivestreamIndicator, ProductDBMeetingTitle, ProductDBGridPagination, ProductDBParticipantCount, ProductDBViewerCount, ProductDBClock } from '@dytesdk/react-ui-kit';
-import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
+import { useDyteMeeting, useDyteSelector } from '@dytesdk/react-web-core';
 import { useEffect, useState } from 'react';
 
 function HeaderWithCustomUI({
@@ -47,7 +47,7 @@ function HeaderWithCustomUI({
 }
 
 export default function Meeting() {
-  const { meeting } = useProductDBMeeting();
+  const { meeting } = useDyteMeeting();
   const [config, setConfig] = useState(defaultConfig);
   /**
   * We need setStates method to add custom functionalities,
