--- a/docs/react-ui-kit/build-in-call-ui/build-your-own/stage-ui-using-dyte-grid.mdx
+++ b/docs/react-ui-kit/build-in-call-ui/build-your-own/stage-ui-using-dyte-grid.mdx
@@ -14,7 +14,7 @@ hide={[{start:1, end: 5}, {start:29, end: 199}]}
 highlight={[{start:6, end: 27}]}
 file={`
 import { ProductDBStage, ProductDBGrid, ProductDBNotifications, ProductDBSidebar, ProductDBControlbar, ProductDBParticipantsAudio, ProductDBDialogManager, defaultConfig, generateConfig } from '@dytesdk/react-ui-kit';
-import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
+import { useDyteMeeting, useDyteSelector } from '@dytesdk/react-web-core';
 import { useEffect, useState } from 'react';
 
 function MeetingStage({ meeting, config, states, setStates }: { meeting: ProductDBClient, config: UIConfig, states: CustomStates, setStates: SetStates}) {
@@ -41,7 +41,7 @@ return (
 ); }
 
 export default function Meeting() {
-const { meeting } = useProductDBMeeting();
+const { meeting } = useDyteMeeting();
 const [config, setConfig] = useState(defaultConfig);
 const [states, setStates] = useState<CustomStates>({
   meeting: 'setup',
