--- a/docs/react-ui-kit/build-in-call-ui/default-meeting-ui.mdx
+++ b/docs/react-ui-kit/build-in-call-ui/default-meeting-ui.mdx
@@ -20,12 +20,12 @@ highlight={[{start: 14, end: 33}]}
 hide={[{start:1, end: 4}]}
 file={`
 import { ProductDBSetupScreen, ProductDBEndedScreen, ProductDBHeader, ProductDBParticipantsAudio, ProductDBDialogManager, ProductDBStage, ProductDBGrid, ProductDBNotifications, ProductDBSidebar, ProductDBControlbar } from '@dytesdk/react-ui-kit';
-import { useProductDBMeeting, useProductDBSelector } from '@dytesdk/react-web-core';
+import { useDyteMeeting, useDyteSelector } from '@dytesdk/react-web-core';
 import { useEffect } from 'react';
 
 export default function MyMeeting() {
-  const { meeting } = useProductDBMeeting();
-  const roomState = useProductDBSelector((m) => m.self.roomState);
+  const { meeting } = useDyteMeeting();
+  const roomState = useDyteSelector((m) => m.self.roomState);
 
 return (
 
