--- a/docs/react-ui-kit/build-pre-call-ui/build-your-own/edit-user-name.mdx
+++ b/docs/react-ui-kit/build-pre-call-ui/build-your-own/edit-user-name.mdx
@@ -27,13 +27,13 @@ At the end, we let user join the meeting using `await meeting.join();`.
 highlight={[{start: 8, end:8}, {start: 29, end: 30}, {start: 44, end:44}]}
 hide={[{start: 1, end: 4}]}
 file={`
-import { useProductDBMeeting, useProductDBSelector } from "@dytesdk/react-web-core";
+import { useDyteMeeting, useDyteSelector } from "@dytesdk/react-web-core";
 import { ProductDBButton } from "@dytesdk/react-ui-kit";
 import { useState, useEffect } from "react";
 
 export default function CustomMeetingPreview() {
-  const { meeting } = useProductDBMeeting();
-  const permissions = useProductDBSelector((m) => m.self.permissions);
+  const { meeting } = useDyteMeeting();
+  const permissions = useDyteSelector((m) => m.self.permissions);
   const [participantName, setParticipantName] = useState("");
 
   useEffect(() => {
