--- a/docs/react-web-core/participants/pip.mdx
+++ b/docs/react-web-core/participants/pip.mdx
@@ -23,7 +23,7 @@ Use the boolean value at `meeting.participants.pip.isSupported` to check if the 
 Call `meeting.participants.pip.init()` to activate PIP mode. Optionally you can pass height and width the configure the size of the PIP tile
 
 ```ts
-const { meeting } = useProductDBMeeting();
+const { meeting } = useDyteMeeting();
 
 meeting.participants.pip.init({
   width: 360,
