--- a/docs/rn-core/participants/remote-participants.mdx
+++ b/docs/rn-core/participants/remote-participants.mdx
@@ -18,7 +18,7 @@ participants who joined the meeting:
 
 ```ts
 // get all joined participants
-const joinedParticipants = useProductDBSelector(meeting.participants.joined);
+const joinedParticipants = useDyteSelector(meeting.participants.joined);
 ```
 
 The `meeting.participants` object has the following **maps** of participants
