--- a/docs/rn-ui-kit/quickstart.mdx
+++ b/docs/rn-ui-kit/quickstart.mdx
@@ -263,8 +263,8 @@ export default function App() {
 
 ## Example: Using Prebuilt `ProductDBMeeting` Component
 
-In the following example, a meeting is created using the `useProductDBMeeting`
-component. `useProductDBMeeting` essentially returns the meeting object you passed to
+In the following example, a meeting is created using the `useDyteMeeting`
+component. `useDyteMeeting` essentially returns the meeting object you passed to
 the `ProductDBProvider`.
 
 `ProductDBMeeting` renders the entire meeting UI. It loads your preset and renders
@@ -276,7 +276,7 @@ For more information on the other props of `ProductDBMeeting`, see
 
 ```jsx
 function YourCustomMeetingComponent() {
-  const { meeting } = useProductDBMeeting();
+  const { meeting } = useDyteMeeting();
 
   return (
     <ProductDBMeeting meeting={meeting} />
